--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ header {
     color: white;
     padding: 50px 0;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: fixed; 
+    width: 100%;
+    transition: 0.2s;
+
 }
 
 header h1 {
@@ -39,11 +43,13 @@ header .location {
     font-weight: 300;
 }
 
+
+
 .education-section {
     background-color: #ffffff;
-    padding: 50px 20px;
+    padding: 300px 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: -25px;
+    margin-top: -30px;
     border-radius: 10px;
 }
 
@@ -65,7 +71,13 @@ header .location {
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 1s ease-in-out;
+
 }
+.education:hover{
+    animation: education-animation 1s forwards;
+}
+
 
 .education i {
     font-size: 2em;
@@ -88,3 +100,22 @@ header .location {
     color: #666;
     margin: 0;
 }
+
+ /* @keyframes education-animation {
+    0%{background-color: #ffffff ; color: #000000;}
+    20%{background-color: #b7b7b7;color: #302f2f;}
+    50% {background-color: #393838;color: #dbd8d8;}
+    100% {background-color: #000000;color: #ffffff;}
+    
+ } */
+
+ @keyframes education-animation {
+    0% {
+        transform: scale(1) rotate(0deg);
+    }
+    100% {
+        transform: scale(1.1) rotate(5deg);
+    }
+}
+   
+
